glamor: Do not override src alpha only on X11 drawables

Commit d1bbf82d7 (glamor: Don't override source alpha to 1.0 if it's
used for blending) was introduced to fix a previous regression, but it
seems it's too restrictive because it's causing a regression when the
destination is not an X11 resource.

Just add another condition to restrict that to resources with an actual
XID.

Signed-off-by: Olivier Fourdan <ofourdan@redhat.com>
Closes: https://gitlab.freedesktop.org/xorg/xserver/-/issues/1655
Fixes: d1bbf82d7 - glamor: Don't override source alpha to 1.0 if it's
                   used for blending